[package]
name = "desktop-video"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
windows = "0.19.0"
zstd = "0.9.0+zstd.1.5.0"

[build-dependencies]
windows = "0.19.0"